Create Elastic Commands

--- a/SearchAPI/SearchAPI.csproj
+++ b/SearchAPI/SearchAPI.csproj
@@ -11,7 +11,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Elasticsearch.Net" Version="6.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="NEST" Version="6.2.0" />
   </ItemGroup>
 
 </Project>
