--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,23 +6,9 @@ services:
     build:
       context: .
       dockerfile: SearchAPI/Dockerfile
-  elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:6.3.2
-    container_name: elasticsearch
-    environment:
-      - cluster.name=docker-cluster
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-    volumes:
-      - esdata1:/usr/share/elasticsearch/data
+  elk:
+    image: sebp/elk
     ports:
-      - 9200:9200
-    networks:
-      - esnet
-volumes:
-  esdata1:
-    driver: local
+      - "5601:5601"
+      - "9200:9200"
+      - "5044:5044"
